--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,127 @@
+altair==4.2.2
+appnope==0.1.3
+asttokens==2.2.1
+attrs==22.2.0
+backcall==0.2.0
+beautifulsoup4==4.12.2
+blinker==1.6.2
+cachetools==5.3.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+click==8.1.3
+comm==0.1.2
 DateTime==5.0
+debugpy==1.6.6
+decorator==5.1.1
+docopt==0.6.2
+dropbox==11.36.2
+entrypoints==0.4
+et-xmlfile==1.1.0
+exceptiongroup==1.1.3
+executing==1.2.0
+gitdb==4.0.10
+GitPython==3.1.31
 google-api-core==2.11.0
-google-api-python-client==2.80.0
+google-api-python-client==2.101.0
 google-auth==2.16.2
-google-auth-httplib2==0.1.0
-google-auth-oauthlib==1.0.0
+google-auth-httplib2==0.1.1
+google-auth-oauthlib==1.1.0
 googleapis-common-protos==1.58.0
-gspread==5.11.3
+gspread==5.7.2
+h11==0.14.0
+html5lib==1.1
+httplib2==0.21.0
+idna==3.4
+importlib-metadata==6.3.0
+install==1.3.5
+ipykernel==6.21.3
+ipython==8.11.0
+jedi==0.18.2
+Jinja2==3.1.2
+jsonschema==4.17.3
+jupyter_client==8.0.3
+jupyter_core==5.2.0
+lxml==4.9.3
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+millify==0.1.1
+nest-asyncio==1.5.6
 numpy==1.24.2
+oauth2client==4.1.3
+oauthlib==3.2.2
+openpyxl==3.1.2
+outcome==1.2.0
+packaging==23.0
 pandas==1.5.3
+parso==0.8.3
+patsy==0.5.3
+pdfminer==20191125
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.5.0
+pipreqs==0.4.13
+platformdirs==3.1.0
+plotly==5.14.1
+plotly-express==0.4.1
+ply==3.11
+prompt-toolkit==3.0.38
+protobuf==3.20.3
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==11.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycryptodome==3.17
+pydeck==0.8.0
+Pygments==2.14.0
+Pympler==1.0.1
+pyparsing==3.0.9
+PyPDF2==3.0.1
+pyrsistent==0.19.3
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-decouple==3.8
+python-dotenv==1.0.0
+pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
+pyzmq==25.0.0
 requests==2.28.2
 requests-oauthlib==1.3.1
+rich==13.3.4
+rsa==4.9
+scipy==1.10.1
+selenium==4.12.0
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.5
+stack-data==0.6.2
+statsmodels==0.13.5
+stone==3.3.1
 streamlit==1.21.0
+stripe==6.1.0
+tenacity==8.2.2
+toml==0.10.2
+toolz==0.12.0
+tornado==6.2
+traitlets==5.9.0
+trio==0.22.2
+trio-websocket==0.10.4
+typing_extensions==4.5.0
+tzdata==2023.3
+tzlocal==4.3
+uritemplate==4.1.1
+urllib3==1.26.14
+validators==0.20.0
+wcwidth==0.2.6
+webdriver-manager==4.0.0
+webencodings==0.5.1
+wsproto==1.2.0
+xlrd==2.0.1
+yarg==0.1.9
+zipp==3.15.0
+zope.interface==5.5.2
